change name= in property=

--- a/HeadExercise.html
+++ b/HeadExercise.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="viewport" content="width=device-width, initial-scale=1.0">
     <title>Head exercise</title>
-    <meta name="description" content="exercises with the head of an html file">
-    <meta name="athor" content="Marta Tricoli">
+    <meta property="description" content="exercises with the head of an html file">
+    <meta property="author" content="Marta Tricoli">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
