add some attributes to the head of HeadExercise.html

--- a/HeadExercise.html
+++ b/HeadExercise.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta property="viewport" content="width=device-width, initial-scale=1.0">
     <title>Head exercise</title>
+    <meta property="og:title" content="Head exercise">
+    <meta property="og:type" content="file.html">
+    <meta property="og:url" content="https://github.com/MartaTricoli/HTMLexercises/blob/main/HeadExercise.html" >
     <meta property="description" content="exercises with the head of an html file">
     <meta property="author" content="Marta Tricoli">
+    <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.flover.it%2Fit%2F&psig=AOvVaw0eye9L5hen_fMXs8LO3t-a&ust=1697030050175000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCKiTnNzH64EDFQAAAAAdAAAAABAJ"> 
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
