add a comment at the bottom of tableExercise.html

--- a/tableExercise.html
+++ b/tableExercise.html
@@ -76,7 +76,9 @@
             <td>sum</td>
             <td>Cash entries sum</td>
             <td>Cash outflow sum</td>
-        </tr>
+        </tr>       
     </table>
 </body>
 </html>
+
+<!-- esercizio svolto in collaborazione con Francesco Barranca -->
