Update tableExercise.html fix a mispelled word.

--- a/tableExercise.html
+++ b/tableExercise.html
@@ -68,7 +68,7 @@
             <td>- 75$</td>
         </tr>
         <tr>
-            <td>Dicember</td>
+            <td>December</td>
             <td>+ 200$</td>
             <td>- 150$</td>
         </tr>
