--- a/TagsExercise.html
+++ b/TagsExercise.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Tags exercise">
     <meta property="og:type" content="file.html">
-    <meta property="og:url" content="" >
+    <meta property="og:url" content="https://github.com/MartaTricoli/HTMLexercises/blob/main/TagsExercise.html" >
     <meta property="description" content="exercises with html tags">
     <meta property="author" content="Marta Tricoli">
     <title>Tags exercise</title>
