Update TagsExercise.html fix mispelled word.

--- a/TagsExercise.html
+++ b/TagsExercise.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <h1>This is the main title</h1>
-        <h2>And alogn with the second title , they both belong to the header tag</h2>
+        <h2>And along with the second title , they both belong to the header tag</h2>
         <hr>
     </header>
     <aside>
