modify the quote

--- a/TagsExercise.html
+++ b/TagsExercise.html
@@ -34,7 +34,7 @@
             <br>
             <h3>Inside the body the are some sections</h3>
             <br>
-            <p>This is a quotation: <em>Hello world</em></p>
+            <p>This is a quotation: <cite>Hello world</cite></p>
             <hr>
         </section>
         <section>
