--- a/tableExercise.html
+++ b/tableExercise.html
@@ -10,76 +10,80 @@
 </head>
 <body>
     <table>
-        <tr>
-            <th><center>Month</center></th>
-            <th><center>cash entries</center></th>
-            <th><center>cash outflows</center></th>
-        </tr>
-        <tr>
-            <td><center>January</center></td>
-            <td><center>+ 100$</center></td>
-            <td><center>- 50$</center></td>
-        </tr>
-        <tr>
-            <td><center>February</center></td>
-            <td><center>+ 250$</center></td>
-            <td><center>- 100$</center></td>
-        </tr>
-        <tr>
-            <td><center>March</center></td>
-            <td><center>+ 80$</center></td>
-            <td><center>- 120$</center></td>
-        </tr>
-        <tr>
-            <td><center>April</center></td>
-            <td><center>+ 130$</center></td>
-            <td><center>- 110$</center></td>
-        </tr>
-        <tr>
-            <td><center>May</center></td>
-            <td><center>+ 95$</center></td>
-            <td><center>- 50$</center></td>
-        </tr>
-        <tr>
-            <td><center>June</center></td>
-            <td><center>+ 135$</center></td>
-            <td><center>- 150$</center></td>
-        </tr>
-        <tr>
-            <td><center>July</center></td>
-            <td><center>+ 200$</center></td>
-            <td><center>- 115$</center></td>
-        </tr>
-        <tr>
-            <td><center>August</center></td>
-            <td><center>+ 300$</center></td>
-            <td><center>- 150$</center></td>
-        </tr>
-        <tr>
-            <td><center>September</center></td>
-            <td><center>+ 170$</center></td>
-            <td><center>- 200$</center></td>
-        </tr>
-        <tr>
-            <td><center>October</center></td>
-            <td><center>+ 140$</center></td>
-            <td><center>- 110$</center></td>
-        </tr>
-        <tr>
-            <td><center>November</center></td>
-            <td><center>+ 100$</center></td>
-            <td><center>- 75$</center></td>
-        </tr>
-        <tr>
-            <td><center>December</center></td>
-            <td><center>+ 200$</center></td>
-            <td><center>- 150$</center></td>
-        </tr>
-        <tr>
-            <td><center>sum</center></td>
-            <td><center>+ 1900$</center></td>
-            <td><center>- 1380$</center></td>
-        </tr>       
+        <thead>
+            <tr>
+                <th>Month</th>
+                <th>cash entries</th>
+                <th>cash outflows</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>January</td>
+                <td>+ 100$</td>
+                <td>- 50$</td>
+            </tr>
+            <tr>
+                <td>February</td>
+                <td>+ 250$</td>
+                <td>- 100$</td>
+            </tr>
+            <tr>
+                <td>March</td>
+                <td>+ 80$</td>
+                <td>- 120$</td>
+            </tr>
+            <tr>
+                <td>April</td>
+                <td>+ 130$</td>
+                <td>- 110$</td>
+            </tr>
+            <tr>
+                <td>May</td>
+                <td>+ 95$</td>
+                <td>- 50$</td>
+            </tr>
+            <tr>
+                <td>June</td>
+                <td>+ 135$</td>
+                <td>- 150$</td>
+            </tr>
+            <tr>
+                <td>July</td>
+                <td>+ 200$</td>
+                <td>- 115$</td>
+            </tr>
+            <tr>
+                <td>August</td>
+                <td>+ 300$</td>
+                <td>- 150$</td>
+            </tr>
+            <tr>
+                <td>September</td>
+                <td>+ 170$</td>
+                <td>- 200$</td>
+            </tr>
+            <tr>
+                <td>October</td>
+                <td>+ 140$</td>
+                <td>- 110$</td>
+            </tr>
+            <tr>
+                <td>November</td>
+                <td>+ 100$</td>
+                <td>- 75$</td>
+            </tr>
+            <tr>
+                <td>December</td>
+                <td>+ 200$</td>
+                <td>- 150$</td>
+            </tr>
+            <tr>
+                <td>sum</td>
+                <td>+ 1900$</td>
+                <td>- 1380$</td>
+            </tr>        
+        </tbody>
     </table>
 </body>
 </html>
