correction NavbarExercise.html: no <ul> but <div>

--- a/NavbarExercise.html
+++ b/NavbarExercise.html
@@ -11,27 +11,31 @@
 <body>
     <header></header>
     <nav>
-        <strong>Navbar</strong>
-        <ul>
-            <li><a href="https://www.w3schools.com/html/default.asp">Home</a></li>
-            <li><a href="https://www.linksmt.it/">Link</a></li>
-            <li>
-                <!--qui ho provato a fare un menù a tendina-->
+        <div>
+            <div><strong>Navbar</strong></div>
+            <div>
+                <a href="https://www.w3schools.com/html/default.asp">Home</a>
+            </div>
+            <div>
+                <a href="https://www.linksmt.it/">Link</a>
+            </div>
+            <div>
                 <div class="dropdown">
                     <button class="dropdown-button">Dropdown &#11206;</button>
                     <div class="dropdown-contents">
                       <div><a href="">Link 1</a></div>
                       <div><a href="">Link 2</a></div>
                       <div><a href="">Link 3</a></div>
-                      <!--ho messo i link dentro dei <div> per averli disposti in verticale-->
                     </div>
                 </div>
-            </li> 
-            <li>Disabled</li>
-        </ul>
-        <br>
-        <input type="text" name="" id="" placeholder="Search"> <!--name e id li suggeriva vsc come autocompletamento del tag input, ho preferito lasciarli vuoti piuttosto che eliminarli.-->
-        <button>Search</button>    
+            </div>
+            <div>Disabled</div>
+        </div>
+        <div>
+            <br>
+            <input type="text" name="" id="" placeholder="Search">
+            <button>Search</button>    
+        </div>
         <hr>
     </nav>
     <main></main>
